# hc-stark

./: .gitignore  BUSINESS_GUIDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP_EXTENSIONS.md  deny.toml  docker-compose.yml  pricing.json  rust-toolchain.toml  smithery.yaml
.cargo/: audit.toml
.github/workflows/: benches.yml  ci.yml  publish-sdks.yml  sdks-ci.yml
billing/: STRIPE_PRODUCT_IDS.md  STRIPE_SETUP.md  backup.sh  create_checkout.py  deploy_webhook_secret.sh  migrate_developer_paid.py  migrate_plans.py  provision_tenant.py  requirements.txt  setup_stripe_products.sh  setup_stripe_v2_pricing.sh  setup_stripe_webhook.sh  sync_keys.py  sync_usage.py  tenant_admin.py  tenant_store.py
billing/templates/: magic_link.txt  welcome.txt
billing/tests/: test_pricing_parity.py  test_sync_keys.py  (+2 more)
clients/python/: README.md  pyproject.toml
clients/python/tests/: test_client.py
clients/python/tinyzkp/: __init__.py  client.py
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
contracts/: IHcStarkVerifier.sol  StarkVerifier.sol
crates/hc-bench/: Cargo.toml
crates/hc-bench/src/: height.rs  lde.rs  lib.rs  merkle_paths.rs  recursion.rs  verifier.rs
crates/hc-bench/tests/: scaling.rs
crates/hc-cli/: Cargo.toml
crates/hc-cli/src/: config.rs  main.rs
crates/hc-cli/src/commands/: bench.rs  inspect.rs  mod.rs  prove.rs  recursion.rs  verify.rs
crates/hc-cli/tests/: cli_roundtrip.rs
crates/hc-core/: Cargo.toml
crates/hc-core/benches/: field_arithmetic.rs
crates/hc-core/examples/: fft_test.rs  field_test.rs
crates/hc-core/src/: arena.rs  bytes.rs  domain.rs  error.rs  lib.rs  random.rs  utils.rs
crates/hc-core/src/fft/: backend.rs  mod.rs  parallel.rs  radix2.rs  tiled_fft.rs
crates/hc-core/src/field/: batch_ops.rs  extension.rs  mod.rs  prime_field.rs
crates/hc-core/src/poly/: dense.rs  eval.rs  mod.rs  sparse.rs
crates/hc-core/tests/: proptest_field.rs
crates/hc-examples/: Cargo.toml
crates/hc-examples/src/: lib.rs
crates/hc-examples/src/zkml/: dense_layer.rs  mod.rs
crates/hc-fri/: Cargo.toml
crates/hc-fri/src/: config.rs  layer.rs  lib.rs  oracles.rs  parallel.rs  prover.rs  queries.rs  simd_fold.rs  stream.rs  util.rs  verifier.rs
crates/hc-height/: Cargo.toml
crates/hc-height/src/: kzg.rs  lib.rs  merkle.rs
crates/hc-mcp/: Cargo.toml  README.md  mcp.json
crates/hc-mcp/src/: error.rs  executor.rs  lib.rs  types.rs
crates/hc-mcp/src/tools/: discovery.rs  mod.rs  monitoring.rs  output.rs  proving.rs  spartan.rs  verification.rs  zkml.rs
crates/hc-mcp/tests/: tools_test.rs
crates/hc-node/: Cargo.toml
crates/hc-node/src/: lib.rs
crates/hc-prover/: Cargo.toml
crates/hc-prover/src/: block_tuner.rs  commitment.rs  config.rs  fri_height.rs  kzg.rs  lib.rs  merkle_height.rs  metrics.rs  prove.rs  queries.rs  trace_stream.rs  transcript.rs
crates/hc-prover/src/pipeline/: mod.rs  phase1_commit.rs  phase2_fri.rs  phase3_queries.rs
crates/hc-prover/tests/: error_paths.rs
crates/hc-python/: Cargo.toml
crates/hc-python/src/: lib.rs
crates/hc-recursion/: Cargo.toml
crates/hc-recursion/src/: aggregator.rs  aggregator_v2.rs  artifact.rs  dual_commit.rs  ivc.rs  lib.rs  poseidon_transcript.rs  spec.rs  wrapper.rs
crates/hc-recursion/src/circuit/: fri_chain.rs  halo2.rs  mod.rs  poseidon.rs  poseidon_chip.rs  stark_verifier.rs  transcript_gadget.rs  verify_air.rs  verify_fri.rs  verify_merkle.rs
crates/hc-rollup/: Cargo.toml
crates/hc-rollup/src/: batch.rs  lib.rs  state.rs
crates/hc-sdk/: Cargo.toml
crates/hc-sdk/src/: evm_proof.rs  lib.rs  proof.rs  proof_compress.rs  types.rs
crates/hc-sdk/tests/: fuzzish.rs  golden_fixtures.rs  structured_mutations.rs
crates/hc-sdk/tests/fixtures/: v2_kzg_proof.json  v3_toy_stark_proof.json
crates/hc-server/: Cargo.toml
crates/hc-server/sql/: usage_pg.sql
crates/hc-server/src/: auth.rs  job_index.rs  lib.rs  main.rs  usage_log.rs  workloads.rs
crates/hc-server/tests/: api.rs
crates/hc-simd/: Cargo.toml
crates/hc-simd/src/: avx2.rs  lib.rs  neon.rs  scalar4.rs
crates/hc-sumcheck/: Cargo.toml  README.md
crates/hc-sumcheck-spartan/: Cargo.toml
crates/hc-sumcheck-spartan/src/: eq.rs  lib.rs  prove.rs  r1cs.rs  sparse.rs
crates/hc-sumcheck/src/: lib.rs  linear_product.rs  multilinear.rs  product.rs  proof.rs  prover.rs
crates/hc-verifier/: Cargo.toml
crates/hc-verifier/src/: api.rs  errors.rs  fri_verify.rs  lib.rs  transcript.rs
crates/hc-verifier/tests/: proptest_soundness.rs
crates/hc-wasm/: Cargo.toml  build.sh
crates/hc-wasm/src/: lib.rs  types.rs
crates/hc-workloads/: Cargo.toml
crates/hc-workloads/src/: builtin.rs  lib.rs  spartan_templates.rs  unified.rs  zkml_templates.rs
crates/hc-workloads/src/spartan_templates/: r1cs_template.rs
crates/hc-workloads/src/templates/: accumulator.rs  computation.rs  data_integrity.rs  hash_preimage.rs  mod.rs  policy.rs  range_proof.rs
crates/hc-workloads/src/zkml_templates/: matmul.rs
crates/hc-workloads/tests/: template_examples.rs
crates/hc-zkml/: Cargo.toml  README.md
crates/hc-zkml/src/: graph.rs  lib.rs  matmul.rs  proof.rs  streaming.rs  tensor.rs
crates/hc-zkvm/: Cargo.toml  README.md
crates/hc-zkvm/src/: isa.rs  lib.rs  proof.rs  state.rs
deploy/: server-card.json
docs/: operations.md  parameter_guide.md  postgres_migration.md  proof_format_v4_zk.md  whitepaper.md  whtiepaper.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_proof_bytes.rs  fft_roundtrip.rs  field_ops.rs  malformed_proof.rs  merkle_path.rs  verify_proof_bytes.rs
marketing/: HN_LAUNCH.md  INTEGRATION_CURSOR.md  INTEGRATION_LANGCHAIN.md  MCP_DIRECTORY.md  MCP_DIRECTORY_MCPSO.md  MCP_DIRECTORY_SMITHERY.md  OUTBOUND_EMAIL.md  README.md  USER_INTERVIEWS.md  X_THREAD.md
scripts/: aggregate_height_metrics.py  check_bench_thresholds.py  test_suite.sh
site/: _worker.js  account.html  compute.html  contact.html  docs.html  index.html  privacy.html  robots.txt  shared.css  signup.html  sitemap.xml  status.html  terms.html  try.html  welcome.html  wrangler.toml
skills/: .gitignore
(+118 files in other folders)
