[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinyzkp"
version = "0.1.1"
description = "Python client for the TinyZKP proving API — generate and verify ZK-STARK proofs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["zk", "stark", "zero-knowledge", "proof", "cryptography"]
authors = [{ name = "TinyZKP", email = "support@tinyzkp.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = ["httpx>=0.25"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "respx>=0.20"]

[project.urls]
Homepage = "https://tinyzkp.com"
Documentation = "https://api.tinyzkp.com/docs"
Repository = "https://github.com/logannye/hc-stark"
Issues = "https://github.com/logannye/hc-stark/issues"

[tool.hatch.build.targets.wheel]
packages = ["tinyzkp"]
