[package]
name = "tinyzkp"
version = "0.1.1"
edition = "2021"
rust-version = "1.77"
license = "MIT"
description = "Rust client for the TinyZKP proving API — generate and verify ZK-STARK proofs"
keywords = ["zk", "stark", "zero-knowledge", "proof", "cryptography"]
categories = ["cryptography", "api-bindings"]
homepage = "https://tinyzkp.com"
repository = "https://github.com/logannye/hc-stark"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["time"] }
