 [package]
 name = "hc-bench"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 publish = false

[dependencies]
hc-core = { path = "../hc-core" }
hc-prover = { path = "../hc-prover" }
hc-vm = { path = "../hc-vm" }
hc-commit = { path = "../hc-commit" }
hc-hash = { path = "../hc-hash" }
serde_json = "1.0"

