 [package]
 name = "hc-cli"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 publish = false

 [dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hc-core = { path = "../hc-core" }
hc-prover = { path = "../hc-prover" }
hc-verifier = { path = "../hc-verifier" }
hc-vm = { path = "../hc-vm" }

