 [package]
 name = "hc-core"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 publish = false

 [features]
default = []
gpu-fft = []

 [dependencies]
 thiserror.workspace = true
rand.workspace = true
rayon = "1.8"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "field_arithmetic"
harness = false

