 [package]
 name = "hc-examples"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 publish = false

 [dependencies]
hc-core = { path = "../hc-core" }
hc-prover = { path = "../hc-prover" }
hc-vm = { path = "../hc-vm" }
hc-replay = { path = "../hc-replay" }

