 [package]
 name = "hc-fri"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 publish = false

[dependencies]
hc-core = { path = "../hc-core" }
hc-hash = { path = "../hc-hash" }
hc-replay = { path = "../hc-replay" }
hc-commit = { path = "../hc-commit" }
thiserror = "1.0"
rayon = "1.8"

