 [package]
 name = "hc-prover"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 publish = false

 [dependencies]
hc-core = { path = "../hc-core" }
hc-air = { path = "../hc-air" }
hc-vm = { path = "../hc-vm" }
hc-commit = { path = "../hc-commit" }
hc-hash = { path = "../hc-hash" }
hc-fri = { path = "../hc-fri" }
hc-replay = { path = "../hc-replay" }
rayon = "1.8"

