 [package]
 name = "hc-prover"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 publish = false

 [dependencies]
hc-core = { path = "../hc-core" }
hc-air = { path = "../hc-air" }
hc-vm = { path = "../hc-vm" }
hc-commit = { path = "../hc-commit" }
hc-hash = { path = "../hc-hash" }
hc-fri = { path = "../hc-fri" }
hc-replay = { path = "../hc-replay" }
hc-height = { path = "../hc-height" }
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
ark-poly = "0.4"
ark-poly-commit = "0.4"
ark-ff = "0.4"
rand = "0.8"
once_cell = "1.19"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

