[package]
name = "hc-python"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"
publish = false

[lib]
name = "hc_stark"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc-sdk = { path = "../hc-sdk" }
hc-core = { path = "../hc-core" }
hc-prover = { path = "../hc-prover" }
hc-verifier = { path = "../hc-verifier" }
hc-vm = { path = "../hc-vm" }
pyo3 = { version = "0.25", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
