 [package]
 name = "hc-recursion"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 publish = false

 [dependencies]
hc-core = { path = "../hc-core" }
hc-verifier = { path = "../hc-verifier" }

[dev-dependencies]
hc-prover = { path = "../hc-prover" }
hc-vm = { path = "../hc-vm" }

