[package]
name = "hc-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
utoipa = "5.4"

hc-core = { path = "../hc-core" }
hc-air = { path = "../hc-air" }
hc-commit = { path = "../hc-commit" }
hc-fri = { path = "../hc-fri" }
hc-hash = { path = "../hc-hash" }
hc-prover = { path = "../hc-prover" }
hc-verifier = { path = "../hc-verifier" }
hc-vm = { path = "../hc-vm" }
ark-bn254 = "0.4"
ark-serialize = "0.4"

