 [package]
 name = "hc-verifier"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 publish = false

 [dependencies]
hc-core = { path = "../hc-core" }
hc-fri = { path = "../hc-fri" }
hc-hash = { path = "../hc-hash" }
thiserror.workspace = true

[dev-dependencies]
hc-prover = { path = "../hc-prover" }
hc-vm = { path = "../hc-vm" }

