 [package]
 name = "hc-verifier"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 publish = false

 [dependencies]
hc-core = { path = "../hc-core" }
hc-air = { path = "../hc-air" }
hc-fri = { path = "../hc-fri" }
hc-hash = { path = "../hc-hash" }
hc-prover = { path = "../hc-prover" }
thiserror.workspace = true

[dev-dependencies]
hc-vm = { path = "../hc-vm" }
hc-sdk = { path = "../hc-sdk" }
proptest = "1.4"

