[package]
name = "hc-workloads"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0"
inventory = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hc-sdk = { path = "../hc-sdk" }
hc-vm = { path = "../hc-vm" }
hc-zkml = { path = "../hc-zkml" }
hc-core = { path = "../hc-core" }
hc-sumcheck = { path = "../hc-sumcheck" }
hc-sumcheck-spartan = { path = "../hc-sumcheck-spartan" }

[lib]
doctest = false


